<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ForgotPasswordFragment">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_back_arrow"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/close_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="@string/close"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/forgot_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/forgot_password"
        android:layout_marginStart="20dp"/>


    <TextView
        android:id="@+id/verify_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/forgot_pass_text"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="normal"
        android:text="@string/confirm_code"
        android:layout_marginStart="45dp"/>

    <ImageView
        android:id="@+id/forgot_pass_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_login_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verify_text"/>

    <TextView
        android:id="@+id/confirm_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/forgot_pass_image"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/confirmation_code"
        android:layout_marginStart="30dp"/>

    <EditText
        android:id="@+id/edit_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/edit_text_margin"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="@dimen/edit_text_margin"
        android:background="@drawable/details_bg"
        android:hint="@string/enter_code"
        android:inputType="phone"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enter_button"
        android:layout_width="200dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/edit_text_margin"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="@dimen/edit_text_margin"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/blue"
        android:text="@string/enter_code"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/edit_code" />








</androidx.constraintlayout.widget.ConstraintLayout>