<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF">

        <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:background="@drawable/details_bg"
            android:hint="@string/first_name"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:background="@drawable/details_bg"
            android:hint="@string/last_name"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_first_name" />

        <EditText
            android:id="@+id/edit_email_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:background="@drawable/details_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_last_name" />

        <EditText
            android:id="@+id/edit_matricNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:background="@drawable/details_bg"
            android:hint="@string/matric_number"
            android:inputType="phone"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_email_address" />


        <RelativeLayout
            android:id="@+id/password_relative_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_matricNumber">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/details_bg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/showHide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:src="@drawable/ic_show_password" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/confirm_pass_relative_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_relative_layout">

            <EditText
                android:id="@+id/confirm_passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/details_bg"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/show_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:src="@drawable/ic_show_password" />


        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:text="@string/sign_up_text"
            android:textColor="@color/blue"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_pass_relative_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:backgroundTint="@color/blue"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/checkBox" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>