<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:background="#290489C7">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pics"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/profile_pics"
        app:civ_border_color="@color/blue"
        app:civ_border_width="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:layout_marginStart="40dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/profile"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="40dp"
        android:drawableStart="@drawable/ic_edit"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/edit"/>

</RelativeLayout>

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.50"/>

    <View
        android:id="@+id/view"
        android:layout_width="3dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_layout"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:background="@color/blue"/>

    <TextView
        android:id="@+id/full_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/relative_layout"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/view"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/full_name"/>

    <EditText
        android:id="@+id/full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/view"
        android:layout_marginStart="15dp"
        android:textStyle="normal"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/full_name_text"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:hint="Isaac Folarin"/>

    <View
        android:id="@+id/view1"
        android:layout_width="3dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/relative_layout"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:background="@color/blue"/>

    <TextView
        android:id="@+id/department_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/relative_layout"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/view1"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/department"/>

    <EditText
        android:id="@+id/department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/view1"
        android:layout_marginStart="15dp"
        android:textStyle="normal"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/department_text"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:hint="Mech Engineering"/>

    <View
        android:id="@+id/view2"
        android:layout_width="3dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:background="@color/blue"/>

    <TextView
        android:id="@+id/matric_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/view"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/matric_number"/>

    <EditText
        android:id="@+id/matric_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/view"
        android:layout_marginStart="15dp"
        android:textStyle="normal"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/matric_text"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:hint="190403533"/>

    <View
        android:id="@+id/view3"
        android:layout_width="3dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/view1"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:background="@color/blue"/>

    <TextView
        android:id="@+id/phone_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view1"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/view1"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/phone_number"/>

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/view1"
        android:layout_marginStart="15dp"
        android:textStyle="normal"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/phone_number_text"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:hint="09034029095"/>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/blue"/>

    <TextView
        android:id="@+id/acct_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view4"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/acct_settings"/>

    <RelativeLayout
        android:id="@+id/relative_layout1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acct_settings"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/change_password"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_forward_arrow"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_layout1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/about_app"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_forward_arrow"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout3"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_layout2"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:text="@string/faq"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_forward_arrow"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>


    </RelativeLayout>

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_layout3"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/logout"/>















</androidx.constraintlayout.widget.ConstraintLayout>