<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_matric_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:background="@drawable/details_bg"
            android:hint="@string/matric_number"
            android:inputType="phone"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_matric_number">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/details_bg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/showHide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:src="@drawable/ic_show_password" />


        </RelativeLayout>


        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:text="@string/forgot_password"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relative_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:backgroundTint="@color/blue"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/forgot_password" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>